When text decoration is underline or lie-through, some related IA2 attributes need to deviate from their defaults.

BUG=695646
R=dmazzoni@chromium.org, aleventhal@google.com
TESTED=browser test, manually with the file attached to bug

Review-Url: https://codereview.chromium.org/2716183003
Cr-Commit-Position: refs/heads/master@{#455678}

Former-commit-id: 71f05187c1c575f42a2a37c197ffd3b85945bfd8