content/browser/accessibility/browser_accessibility_win_unittest.cc
@@ -1858,7 +1858,13 @@ TEST_F(BrowserAccessibilityTest, TestTextAttributesInContentEditables) {
   EXPECT_NE(base::string16::npos,
             base::string16(text_attributes).find(L"font-weight:normal"));
   EXPECT_NE(base::string16::npos,
-            base::string16(text_attributes).find(L"font-style:underline"));
+            base::string16(text_attributes).find(L"font-style:normal"));
+  EXPECT_NE(
+      base::string16::npos,
+      base::string16(text_attributes).find(L"text-underline-style:solid"));
+  EXPECT_NE(
+      base::string16::npos,
+      base::string16(text_attributes).find(L"text-underline-type:single"));
   text_attributes.Reset();
 
   hr = ax_link_text->get_attributes(2, &start_offset, &end_offset,
@@ -1871,7 +1877,13 @@ TEST_F(BrowserAccessibilityTest, TestTextAttributesInContentEditables) {
   EXPECT_NE(base::string16::npos,
             base::string16(text_attributes).find(L"font-weight:normal"));
   EXPECT_NE(base::string16::npos,
-            base::string16(text_attributes).find(L"font-style:underline"));
+            base::string16(text_attributes).find(L"font-style:normal"));
+  EXPECT_NE(
+      base::string16::npos,
+      base::string16(text_attributes).find(L"text-underline-style:solid"));
+  EXPECT_NE(
+      base::string16::npos,
+      base::string16(text_attributes).find(L"text-underline-type:single"));
   EXPECT_NE(base::string16::npos,
             base::string16(text_attributes).find(L"invalid:spelling"));
   text_attributes.Reset();
@@ -1887,6 +1899,12 @@ TEST_F(BrowserAccessibilityTest, TestTextAttributesInContentEditables) {
     EXPECT_NE(base::string16::npos, attributes.find(L"font-family:Helvetica"));
     EXPECT_NE(base::string16::npos, attributes.find(L"font-weight:normal"));
     EXPECT_NE(base::string16::npos, attributes.find(L"font-style:normal"));
+    EXPECT_NE(
+        base::string16::npos,
+        base::string16(text_attributes).find(L"text-underline-style:none"));
+    EXPECT_NE(
+        base::string16::npos,
+        base::string16(text_attributes).find(L"text-underline-type:none"));
     EXPECT_EQ(base::string16::npos, attributes.find(L"invalid:spelling"));
     text_attributes.Reset();
   }
@@ -1918,6 +1936,10 @@ TEST_F(BrowserAccessibilityTest, TestTextAttributesInContentEditables) {
             base::string16(text_attributes).find(L"font-weight:normal"));
   EXPECT_NE(base::string16::npos,
             base::string16(text_attributes).find(L"font-style:normal"));
+  EXPECT_NE(base::string16::npos,
+            base::string16(text_attributes).find(L"text-underline-style:none"));
+  EXPECT_NE(base::string16::npos,
+            base::string16(text_attributes).find(L"text-underline-type:none"));
   EXPECT_EQ(base::string16::npos,
             base::string16(text_attributes).find(L"invalid:spelling"));
   text_attributes.Reset();
